[package]
name = "ligai-review"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
flowsnet-platform-sdk = "0.1.4"
github-flows = "0.5.1"
ligab = "0.1.2"
openai-flows = "0.7.1"
regex = "1.8.1"
serde_json = "1.0.96"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
